--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,48 +7,46 @@
     android:orientation="vertical"
     tools:context="com.example.cheng.js.MainActivity">
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="18dp"
-            android:text="js交互实例" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="安卓调用js"
             android:textColor="#000000"
-            android:textSize="15dp"
-            android:text="安卓调用js" />
+            android:textSize="15dp" />
 
         <Button
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="重置"
             android:textColor="#000000"
-            android:textSize="15dp"
-            android:text="重置" />
+            android:textSize="15dp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="从js获取到得数据为："
             android:textColor="#FF0000"
-            android:textSize="15dp"
-            android:text="从js获取到得数据为：" />
+            android:textSize="15dp" />
 
         <View
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#E9967A"/>
+            android:layout_marginTop="20dp"
+            android:background="#E9967A" />
+    </LinearLayout>
 
-        <WebView
-            android:id="@+id/wv"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    <WebView
+        android:id="@+id/wv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp" />
 
 </LinearLayout>
